--- a/cx.html
+++ b/cx.html
@@ -1292,8 +1292,8 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#12" id="62">Procs</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#newCxcounter,"
-    title="newCxcounter(): ref (Cxcounter)"><wbr />new<wbr />Cxcounter<span class="attachedType" style="visibility:hidden">Cxcounter</span></a></li>
+      <li><a class="reference" href="#newCxCounter,"
+    title="newCxCounter(): ref (Cxcounter)"><wbr />new<wbr />Cx<wbr />Counter<span class="attachedType" style="visibility:hidden">Cxcounter</span></a></li>
   <li><a class="reference" href="#add,ref.Cxcounter"
     title="add(co: ref Cxcounter)"><wbr />add<span class="attachedType" style="visibility:hidden">Cxcounter</span></a></li>
   <li><a class="reference" href="#dec,ref.Cxcounter"
@@ -1314,14 +1314,14 @@ function main() {
     title="checkTrueColorSupport(): string"><wbr />check<wbr />True<wbr />Color<wbr />Support<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#cxtoLower,char"
     title="cxtoLower(c: char): char"><wbr />cxto<wbr />Lower<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#cxTrueColorSet,int,int"
-    title="cxTrueColorSet(max: int = 888; step: int = 12): seq[string]"><wbr />cx<wbr />True<wbr />Color<wbr />Set<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#color38,"
-    title="color38(): int"><wbr />color38<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#color48,"
-    title="color48(): int"><wbr />color48<span class="attachedType" style="visibility:hidden"></span></a></li>
-  <li><a class="reference" href="#color3848,"
-    title="color3848(): int"><wbr />color3848<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#getCxTrueColorSet,int,int"
+    title="getCxTrueColorSet(max: int = 888; step: int = 12): auto"><wbr />get<wbr />Cx<wbr />True<wbr />Color<wbr />Set<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#color38,seq[string]"
+    title="color38(cxTrueCol: seq[string]): int"><wbr />color38<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#color48,seq[string]"
+    title="color48(cxTrueCol: seq[string]): int"><wbr />color48<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#color3848,seq[string]"
+    title="color3848(cxTrueCol: seq[string]): int"><wbr />color3848<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#stripper,string"
     title="stripper(str: string): string"><wbr />stripper<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#streamFile,string,FileMode"
@@ -1866,7 +1866,7 @@ Version     : 0.9.9
 
 ProjectStart: 2015-06-20
 
-Latest      : 2017-12-19
+Latest      : 2017-12-21
 
 Compiler    : Nim &gt;= 0.17.x dev branch
 
@@ -1939,7 +1939,7 @@ In progress : moving some of the non core procs to module cxutils.nim
               
               moving constants to cxconsts.nim
 
-Latest      : changing time date related code to work with newest times.nim
+Latest      : changed time date related code to work with newest times.nim
 
 
 Funding     : Here are the options :
@@ -2040,7 +2040,7 @@ Funding     : Here are the options :
 <div class="section" id="12">
 <h1><a class="toc-backref" href="#12">Procs</a></h1>
 <dl class="item">
-<dt id="newCxcounter"><a name="newCxcounter,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">newCxcounter</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Keyword">ref</span> <span class="Other">(</span><span class="Identifier">Cxcounter</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dt id="newCxCounter"><a name="newCxCounter,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">newCxCounter</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Keyword">ref</span> <span class="Other">(</span><span class="Identifier">Cxcounter</span><span class="Other">)</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 <p>newCxcounter</p>
 <p>set up a new cxcounter</p>
@@ -2108,25 +2108,23 @@ rndSample returns one rand sample from a sequence
 
 
 </dd>
-<dt id="cxTrueColorSet"><a name="cxTrueColorSet,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">cxTrueColorSet</span><span class="Other">(</span><span class="Identifier">max</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">888</span><span class="Other">;</span> <span class="Identifier">step</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">12</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span>
+<dt id="getCxTrueColorSet"><a name="getCxTrueColorSet,int,int"></a><pre><span class="Keyword">proc</span> <span class="Identifier">getCxTrueColorSet</span><span class="Other">(</span><span class="Identifier">max</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">888</span><span class="Other">;</span> <span class="Identifier">step</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">12</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">auto</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Identifier">ValueError</span><span class="Other">]</span><span class="Other">,</span>
     <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
-<p>cxTrueColorSet</p>
-<p>generates a seq with truecolors defaults are reasonable 843750 colors to choose from</p>
 
 
 </dd>
-<dt id="color38"><a name="color38,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">color38</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dt id="color38"><a name="color38,seq[string]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">color38</span><span class="Other">(</span><span class="Identifier">cxTrueCol</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 
 
 </dd>
-<dt id="color48"><a name="color48,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">color48</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dt id="color48"><a name="color48,seq[string]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">color48</span><span class="Other">(</span><span class="Identifier">cxTrueCol</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 
 
 </dd>
-<dt id="color3848"><a name="color3848,"></a><pre><span class="Keyword">proc</span> <span class="Identifier">color3848</span><span class="Other">(</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
+<dt id="color3848"><a name="color3848,seq[string]"></a><pre><span class="Keyword">proc</span> <span class="Identifier">color3848</span><span class="Other">(</span><span class="Identifier">cxTrueCol</span><span class="Other">:</span> <span class="Identifier">seq</span><span class="Other">[</span><span class="Identifier">string</span><span class="Other">]</span><span class="Other">)</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other pragmabegin">{.</span><div class="pragma"><span class="Identifier">raises</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span><span class="Other">,</span> <span class="Identifier">tags</span><span class="Other">:</span> <span class="Other">[</span><span class="Other">]</span></div><span class="Other pragmaend">.}</span></pre></dt>
 <dd>
 
 
@@ -3795,7 +3793,7 @@ unequal operator
 <dd>
 <p>loopy</p>
 <p>the lazy programmer's quick simple for-loop template</p>
-<pre class="listing"><span class="Identifier">loopy</span><span class="Punctuation">(</span><span class="FloatNumber">0.</span><span class="Operator">.</span> <span class="DecNumber">10</span><span class="Punctuation">,</span><span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot;The house is in the back.&quot;</span><span class="Punctuation">,</span><span class="Identifier">randcol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre>
+<pre class="listing"><span class="Identifier">loopy</span><span class="Punctuation">(</span><span class="FloatNumber">0.</span><span class="Operator">.&lt;</span><span class="DecNumber">10</span><span class="Punctuation">,</span><span class="Identifier">printLn</span><span class="Punctuation">(</span><span class="StringLit">&quot;The house is in the back.&quot;</span><span class="Punctuation">,</span><span class="Identifier">randcol</span><span class="Punctuation">(</span><span class="Punctuation">)</span><span class="Punctuation">)</span><span class="Punctuation">)</span></pre>
 
 </dd>
 <dt id="loopy2"><a name="loopy2.t,int,int,untyped"></a><pre><span class="Keyword">template</span> <span class="Identifier">loopy2</span><span class="Other">(</span><span class="Identifier">mi</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">0</span><span class="Other">;</span> <span class="Identifier">ma</span><span class="Other">:</span> <span class="Identifier">int</span> <span class="Other">=</span> <span class="DecNumber">5</span><span class="Other">;</span> <span class="Identifier">st</span><span class="Other">:</span> <span class="Identifier">untyped</span><span class="Other">)</span></pre></dt>
@@ -4380,7 +4378,7 @@ zipWith<pre class="listing"><span class="Keyword">var</span> <span class="Identi
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-12-19 22:40:51 UTC</small>
+        <small>Made with Nim. Generated: 2017-12-21 21:52:12 UTC</small>
       </div>
     </div>
   </div>
