--- a/cxconsts.html
+++ b/cxconsts.html
@@ -1251,7 +1251,9 @@ function main() {
 <li>
   <a class="reference reference-toplevel" href="#10" id="60">Consts</a>
   <ul class="simple simple-toc-section">
-      <li><a class="reference" href="#efb1"
+      <li><a class="reference" href="#RuneEmpty"
+    title="RuneEmpty = 0x0000FFFD"><wbr />Rune<wbr />Empty<span class="attachedType" style="visibility:hidden"></span></a></li>
+  <li><a class="reference" href="#efb1"
     title="efb1 = &quot;\xE2\x96\x80&quot;"><wbr />efb1<span class="attachedType" style="visibility:hidden"></span></a></li>
   <li><a class="reference" href="#efb2"
     title="efb2 = &quot;\xE2\x96\x92&quot;"><wbr />efb2<span class="attachedType" style="visibility:hidden"></span></a></li>
@@ -2186,6 +2188,11 @@ function main() {
 <div class="section" id="10">
 <h1><a class="toc-backref" href="#10">Consts</a></h1>
 <dl class="item">
+<dt id="RuneEmpty"><a name="RuneEmpty"></a><pre><span class="Identifier">RuneEmpty</span> <span class="Other">=</span> <span class="DecNumber">0x0000FFFD</span></pre></dt>
+<dd>
+
+
+</dd>
 <dt id="efb1"><a name="efb1"></a><pre><span class="Identifier">efb1</span> <span class="Other">=</span> <span class="StringLit">&quot;\xE2\x96\x80&quot;</span></pre></dt>
 <dd>
 
@@ -4034,7 +4041,7 @@ index into colorNames
       <div class="twelve-columns footer">
         <span class="nim-sprite"></span>
         <br/>
-        <small>Made with Nim. Generated: 2017-12-21 21:52:14 UTC</small>
+        <small>Made with Nim. Generated: 2017-12-23 21:43:15 UTC</small>
       </div>
     </div>
   </div>
